# time-balance

./: .prettierrc  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 1_create_table_activities.sql  2_create_table_entries.sql
src-tauri/src/: lib.rs  utils.rs
src-tauri/src/commands/: activity.rs  entry.rs  mod.rs
src-tauri/src/database/: mod.rs
src-tauri/src/database/models/: activity.rs  entry.rs
src-tauri/src/types/: activity.rs  entry.rs  mod.rs
src/lib/: activities.svelte.ts  entries.svelte.ts  navigation.svelte.ts  utils.ts
src/lib/commands/: activity.ts  entry.ts  index.ts
src/lib/components/: activity-select.svelte  create-activity.svelte  edit-activities.svelte  icon-button.svelte  link.svelte  stopwatch.svelte  titlebar.svelte
src/lib/components/ui/button/: button.svelte
src/lib/components/ui/drawer/: drawer-title.svelte
src/lib/components/ui/input/: input.svelte
src/lib/components/ui/select/: select-content.svelte
src/lib/components/ui/sonner/: sonner.svelte
src/lib/components/ui/tooltip/: tooltip-content.svelte
src/lib/pages/: activity.svelte  entry.svelte  home.svelte  index.ts  not-found.svelte  page-template.svelte  page.svelte
